Fixed layout problems in mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -1262,7 +1262,7 @@ textarea.form-control {
 @media only screen and (max-width: 767px) {
 
     body {
-        font-size: 50px;
+        font-size: 14px;
     }
 
     .parallax {
